--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -26,6 +26,7 @@ jobs:
       run: |
         git config --local user.email "daya0576@gmail.com"
         git config --local user.name "daya0576(bot)"
+        git add .
         git commit -m "Quote of the Day $(date +%Y-%m-%d)" -a
     - name: Push changes
       uses: ad-m/github-push-action@master
