--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -26,7 +26,11 @@ jobs:
         git config --local user.email "daya_bot@gmail.com"
         git config --local user.name "daya0576(bot)"
         git add .
-        git commit -m "Quote of the Day $(date +%Y-%m-%d)" -a
+        if git diff --staged --quiet; then
+          echo "No changes to commit"
+        else
+          git commit -m "Quote of the Day $(date +%Y-%m-%d)"
+        fi
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
